[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/stylized_shape/Rectangle.tscn" type="PackedScene" id=1]
[ext_resource path="res://miscellaneous/fonts/dynamic_fonts/body_2.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/components/ButtonBase/ButtonBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/stylized_shape/Circle.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/SearchBar/SearchBar.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=4]
resource_name = "FLIP_TIMER"
length = 15.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Back/Style/SearchContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 14.9, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.172549, 0.172549, 0.172549, 0.498039 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Back/MarginContainer/SearchLine:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.172549, 0.172549, 0.172549, 1 ), Color( 0.172549, 0.172549, 0.172549, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 10, 10.1, 10.2, 10.3, 12.9, 12.95, 13, 13.05, 13.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -1.0, 0.0, 1.0, 0.0, 0.0, -1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Trigger:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="SearchBar" instance=ExtResource( 3 )]
rect_min_size = Vector2( 244, 62 )
script = ExtResource( 5 )
has_back = true

[node name="Pivot" parent="." index="0"]
position = Vector2( 122, 31 )

[node name="Front" parent="Pivot" index="0"]
margin_left = -122.0
margin_top = -31.0
margin_right = 122.0
margin_bottom = 31.0
rect_min_size = Vector2( 244, 62 )

[node name="BackgroundContainer" parent="Pivot/Front/Style" index="0" instance=ExtResource( 1 )]

[node name="Search" type="Position2D" parent="Pivot/Front/Style" index="1"]
position = Vector2( 120, 31 )

[node name="Circle" parent="Pivot/Front/Style/Search" index="0" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 40 )
background_color = "TRANSLUCENT"
border_color = "DARK"
border_width = [ 5, 5, 5, 5 ]

[node name="Rectangle" parent="Pivot/Front/Style/Search" index="1" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = 3.0
margin_right = 30.0
margin_bottom = 11.0
rect_rotation = 45.0
background_color = "DARK"
corner_radius = [ 1, 1, 1, 1 ]

[node name="MarginContainer" parent="Pivot/Front" index="1"]
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="Back" parent="Pivot" index="1"]
margin_left = -122.0
margin_top = -31.0
margin_right = 122.0
margin_bottom = 31.0

[node name="Style" parent="Pivot/Back" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0

[node name="BackgroundContainer" parent="Pivot/Back/Style" index="0" instance=ExtResource( 1 )]

[node name="SearchContainer" parent="Pivot/Back/Style" index="1" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -15.0
margin_right = 106.0
margin_bottom = 15.0
background_color = "SECONDARY"
corner_radius = [ 4, 4, 4, 4 ]

[node name="MarginContainer" parent="Pivot/Back" index="1"]
margin_right = 244.0
margin_bottom = 62.0
custom_constants/margin_right = 24
custom_constants/margin_top = 16
custom_constants/margin_left = 24
custom_constants/margin_bottom = 16

[node name="SearchLine" type="LineEdit" parent="Pivot/Back/MarginContainer" index="0"]
margin_left = 24.0
margin_top = 16.0
margin_right = 220.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="FlipTimerPlayer" type="AnimationPlayer" parent="." index="3"]
anims/FLIP_TIMER = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="back_flip" from="." to="." method="_on_SearchBar_back_flip"]
[connection signal="text_changed" from="Pivot/Back/MarginContainer/SearchLine" to="." method="_on_SearchLine_text_changed"]
[connection signal="animation_finished" from="FlipTimerPlayer" to="." method="_on_FlipTimerPlayer_animation_finished"]
